--- a/Hackathon/package.json
+++ b/Hackathon/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "connect-mongo": "^2.0.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
@@ -15,6 +16,7 @@
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
+    "mongoose": "^5.5.9",
     "passport-github": "^1.1.0"
   }
 }
