--- a/Hackathon/package.json
+++ b/Hackathon/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "connect-mongo": "^2.0.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
@@ -13,6 +14,7 @@
     "express": "~4.16.0",
     "express-session": "^1.16.1",
     "http-errors": "~1.6.2",
+    "mongoose": "^5.5.9",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
     "passport-github": "^1.1.0"
