--- a/Hackathon/package.json
+++ b/Hackathon/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "bcrypt": "^3.0.6",
@@ -17,7 +17,6 @@
     "mongoose": "^5.5.9",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
-    "mongoose": "^5.5.9",
     "passport-github": "^1.1.0"
   }
 }
