--- a/Hackathon/package.json
+++ b/Hackathon/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^5.5.9",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
+    "node-fetch": "^2.6.0",
     "passport-github": "^1.1.0"
   }
 }
